--- a/indexE.html
+++ b/indexE.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Tom</title>
-
     <link rel="icon" type="image/png" href="img/logo2.png">
 </head>
 <body>
 
-
-<nav>
+  <nav>
     <ul>
       <li><a href="">Home</a></li>
-      <li><a href="/blog/index.html">Blog</a></li>
-      <li><a href="/lu01/blog/erster-eintrag/index.html">Projekte</a></li>
-      <li><a href="/lu01/blog/zweiter-eintrag/index.html">Kontakt</a></li>
-      <a href="indexE.html" id="sprache">DE/EN</a>
+      <li><a href="/lu01/blog/blogE.html">Blog</a></li>
+      <li><a href="/lu01/blog/erster-eintrag/projekteE.html">Projects</a></li>
+      <li><a href="/lu01/blog/zweiter-eintrag/kontaktE.html">Contact</a></li>
+      <a href="index.html" id="sprache">DE/EN</a>
     </ul>
-</nav>
-
-<main>
+  </nav>
+  
+  <main>
     <h1>Web Portfolio von Tom</h1>
 
-    <h2>Willkommen!</h2>
-    <p>Schön, dass Sie auf meiner Seite vorbeischauen.</p>
-    <p>Sie können sich ruhig etwas umsehen. Im Blog dokumentiere ich meine Erfahrungen beim Programmieren. Daneben können Sie auch meine Webprojekte anschauen. </p>
-    <p>Viel Spass.</p>
+    <h2>Welcome!</h2>
+    <p>I'm glad you stopped by my site.</p>
+    <p>Feel free to browse around. The blog is where I document my programming experiences. Besides that, you can also take a look at my web projects. </p>
+    <p>Enjoy.</p>
+
     <h2>Tom</h2>
     
     <img src="img/cole.png" alt="es geht nicht" id="bild">
 
-</main>    
+  </main>
+    
 </body>
 
 <footer>
