--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <li><a href="/blog/index.html">Blog</a></li>
       <li><a href="/blog/erster-eintrag/index.html">Projekte</a></li>
       <li><a href="/blog/zweiter-eintrag/index.html">Kontakt</a></li>
-      <a href="indexE.html" id="sprache">DE/EN</a>
+      
     </ul>
+    <a href="indexE.html" id="sprache" style="float: right;">DE/EN</a>
 </nav>
 
 <main>
