--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 </body>
 
 <footer>
-  <a href="https://www.youtube.com/watch?v=Ns_b4PdBhN8" id="link">Cole Bennett Video</a>
+  <p>Erstellt von Tom Thoma. © 2022</p>
 </footer>
 </html>
