--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="/blog/zweiter-eintrag/index.html">Kontakt</a></li>
       
     </ul>
-    <a href="indexE.html" id="sprache" style="float: right;">DE/EN</a>
+    <a href="indexE.html" id="sprache">DE/EN</a>
 </nav>
 
 <main>
