--- a/indexE.html
+++ b/indexE.html
@@ -18,7 +18,7 @@
       <li><a href="/blog/zweiter-eintrag/kontaktE.html">Contact</a></li>
     </ul>
 
-    <a href="index.html" id="sprache" style="float: right;">DE/EN</a>
+    <a href="index.html" id="sprache">DE/EN</a>
   </nav>
   
   <main>
