--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
     <h2>Willkommen!</h2>
     <p>Schön, dass Sie auf meiner Seite vorbeischauen.</p>
-    <p>Sie können sich ruhig etwas umsehen. Im Blog dokumentiere ich meine Erfahrungen beim Programmieren. Daneben können Sie auch meine Webprojekte anschauen. </p>
+    <p>Sie können sich ruhig etwas umsehen. Im Blog dokumentiere ich meine Erfahrungen beim Programmieren. </p>
+    <p>Daneben können Sie auch meine Webprojekte anschauen.</p>
     <p>Viel Spass.</p>
     <h2>Tom</h2>
     
