--- a/indexE.html
+++ b/indexE.html
@@ -26,8 +26,8 @@
 
     <h2>Welcome!</h2>
     <p>I'm glad you stopped by my site.</p>
-    <p>Feel free to browse around. The blog is where I document my programming experiences.
-    Besides that, you can also take a look at my web projects. </p>
+    <p>Feel free to browse around. The blog is where I document my programming experiences.</p>
+    <p>that, you can also take a look at my web projects.</p>
     <p>Enjoy.</p>
 
     <h2>Tom</h2>
